Fixed: Resizing header caused buttons to wrap when resized.

--- a/src/app/core/header/header.scss
+++ b/src/app/core/header/header.scss
@@ -22,6 +22,7 @@
 
 .left-part {
   justify-content: end;
+  min-width: 400px;
 }
 
 .coffee-icon {
